--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <a href="#">Contact Us</a>
               </div>
             </div>
-            <button>Service</button>
+            <button>Service Code</button>
             <p style="color: grey">© Strive Netflix Clone</p>
           </div>
 
