--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
             <div class="row">
               <div class="col">
-                <a href="#">Audio and Subtitles</a>
+                <a class="flinks" href="#">Audio and Subtitles</a>
               </div>
               <div class="col">
                 <a href="#">Audio Description</a>
