--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
         </ul>
        
       </div>
+      <img src="search_logo.jpg" style="margin-right: 15px;" class="mr-2 " width="22" height="22">
+        <p style="margin-right: 15px;" class="text-center text-white m-1 ">KIDS</p>
+        <img src="bell.png" style="margin-right: 15px; margin-left: 15px;" style="margin-right: 15px;"class="mr-2 " width="22" height="22">
+        <div class="btn-group ">
+          <button class="btn dropdown-toggle text-white" style="margin-right: 15px;" type="button" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
+
+          </button>
+          <div class="dropdown-menu dropdown-menu-right m-1">
+              <button class="dropdown-item" type="button">Action</button>
+              <button class="dropdown-item" type="button">Another action</button>
+              <button class="dropdown-item border-0" type="button">Something else here</button>
+          </div>
+      </div>
     </nav>
 
     <div class="container">
