--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Netflix</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav style="margin-left: 40px;" class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand d-inline-block align-middle mr-2" href="#"><img class="pr-10" src="/assets/netflix_logo.png" width="80" height="30" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -146,11 +146,11 @@
             </div>
           </div>
           
-          <div class="container">
+          <div class="container flinks">
 
             <div class="row">
               <div class="col">
-                <a class="flinks" href="#">Audio and Subtitles</a>
+                <a href="#">Audio and Subtitles</a>
               </div>
               <div class="col">
                 <a href="#">Audio Description</a>
