--- a/index.html
+++ b/index.html
@@ -149,54 +149,54 @@
           <div class="container flinks">
 
             <div class="row">
-              <div class="col">
+              <div class="col links">
                 <a href="#">Audio and Subtitles</a>
               </div>
-              <div class="col">
+              <div class="col links">
                 <a href="#">Audio Description</a>
               </div>
-              <div class="col">
+              <div class="col links">
                 <a href="#">Help Center</a>
               </div>
-              <div class="col">
+              <div class="col links">
                 <a href="#">Gift Cards</a>
               </div>
               
             </div>
 
             <div class="row">
-              <div class="col">
+              <div class="col links">
                 <a href="#">Media Center</a>
               </div>
-              <div class="col">
+              <div class="col links">
                 <a href="#">Inverstor Relations</a>
               </div>
-              <div class="col">
+              <div class="col links">
                 <a href="#">Jobs</a>
               </div>
-              <div class="col">
+              <div class="col links">
                 <a href="#">Terms of Use</a>
               </div>
             </div>
 
             <div class="row">
-              <div class="col">
+              <div class="col links">
                 <a href="#">Privacy</a>
               </div>
-              <div class="col">
+              <div class="col links">
                 <a href="#">Legal Notices</a>
               </div>
-              <div class="col">
+              <div class="col links">
                 <a href="#">Cookie Preferences</a>
               </div>
-              <div class="col">
+              <div class="col links">
                 <a href="#">Corporate Information</a>
               </div>
               
             </div>
 
             <div class="row">
-              <div class="col">
+              <div class="col links">
                 <a href="#">Contact Us</a>
               </div>
             </div>
