Added margin to bottom elements

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               </div>
             </div>
             <button>Service Code</button>
-            <p style="color: grey">© Strive Netflix Clone</p>
+            <p style="color: grey; margin-top: 5px;">© Strive Netflix Clone</p>
           </div>
 
           
