--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
           <li class="nav-item">
             <a class="nav-link" href="#">My List</a>
           </li>
-        
         </ul>
        
       </div>
@@ -115,7 +114,7 @@
         </div>
 
     <div class="container-fluid mt-4 pl-lg-5">
-        <h3 class="section-title text-white">New Releases</h3>
+        <h3 style="margin-left: -10px;" class="section-title text-white">New Releases</h3>
         <div class="row mx-n1 row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5 mb-4">
             <div class="col px-1"><img src="/media/media9.jpg" alt="movie image 1"
                     class="w-100 img-fluid mb-2 mb-lg-0 ">
