--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Netflix</title>
   </head>
   <body>
-    <nav style="margin-left: 40px;" class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand d-inline-block align-middle mr-2" href="#"><img class="pr-10" src="/assets/netflix_logo.png" width="80" height="30" alt=""></a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand d-inline-block align-middle mr-2" href="#"><img style="margin-left: 40px;" class="pr-10" src="/assets/netflix_logo.png" width="80" height="30" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
