--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Netflix</title>
   </head>
   <body>
+
+    <!--added bootstrap navbar and edited-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand d-inline-block align-middle mr-2" href="#"><img style="margin-left: 40px;" class="pr-10" src="/assets/netflix_logo.png" width="80" height="30" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,60 +78,60 @@
     <div class="container-fluid mt-4 pl-lg-5 titles">
         <h3 class="section-title text-white">Trending Now</h3>
         <div class="row mx-n1 row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5 mb-4">
-            <div class="col px-1"><img src="/media/media0.webp" alt="movie image 1"
-                    class="w-100 img-fluid mb-2 mb-lg-0 ">
+            <div class="col px-1"><a href="#"><img src="/media/media0.webp" alt="movie image 1"
+                    class="w-100 img-fluid mb-2 mb-lg-0"></a>
             </div>
-            <div class="col px-1"><img src="/media/media1.jpg" alt="movie image 2"
-                    class="w-100 img-fluid mb-2 mb-lg-0 ">
+            <div class="col px-1"><a href="#"><img src="/media/media1.jpg" alt="movie image 2"
+                    class="w-100 img-fluid mb-2 mb-lg-0"></a>
             </div>
-            <div class="col px-1"><img src="/media/media10.jpg" alt="movie image 3"
-                    class="w-100 img-fluid mb-2 mb-lg-0 ">
+            <div class="col px-1"><a href="#"><img src="/media/media10.jpg" alt="movie image 3"
+                    class="w-100 img-fluid mb-2 mb-lg-0"></a>
             </div>
-            <div class="col px-1"><img src="/media/media11.jpg" alt="movie image 4"
-                    class="w-100 img-fluid mb-2 mb-lg-0  ">
+            <div class="col px-1"><a href="#"><img src="/media/media11.jpg" alt="movie image 4"
+                    class="w-100 img-fluid mb-2 mb-lg-0"></a>
             </div>
-            <div class="col px-1 d-md-none d-lg-block"><img src="/media/media21.webp" alt="movie image 4"
-                    class="w-100 img-fluid mb-2 mb-lg-0  ">
+            <div class="col px-1 d-md-none d-lg-block"><a href="#"><img src="/media/media21.webp" alt="movie image 4"
+                    class="w-100 img-fluid mb-2 mb-lg-0"></a>
             </div>
         </div>
 
     <div class="container-fluid mt-4 pl-lg-5">
         <h3 class="section-title text-white">Watch It Again</h3>
         <div class="row mx-n1 row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5 mb-4">
-            <div class="col px-1"><img src="/media/media4.jpg" alt="movie image 1"
-                    class="w-100 img-fluid mb-2 mb-lg-0 ">
+            <div class="col px-1"><a href="#"><img src="/media/media4.jpg" alt="movie image 1"
+                    class="w-100 img-fluid mb-2 mb-lg-0 "></a>
             </div>
-            <div class="col px-1"><img src="/media/media5.webp" alt="movie image 2"
-                    class="w-100 img-fluid mb-2 mb-lg-0 ">
+            <div class="col px-1"><a href="#"><img src="/media/media5.webp" alt="movie image 2"
+                    class="w-100 img-fluid mb-2 mb-lg-0 "></a>
             </div>
-            <div class="col px-1"><img src="/media/media6.jpg" alt="movie image 3"
-                    class="w-100 img-fluid mb-2 mb-lg-0 ">
+            <div class="col px-1"><a href="#"><img src="/media/media6.jpg" alt="movie image 3"
+                    class="w-100 img-fluid mb-2 mb-lg-0 "></a>
             </div>
-            <div class="col px-1"><img src="/media/media7.webp" alt="movie image 4"
-                    class="w-100 img-fluid mb-2 mb-lg-0  ">
+            <div class="col px-1"><a href="#"><img src="/media/media7.webp" alt="movie image 4"
+                    class="w-100 img-fluid mb-2 mb-lg-0  "></a>
             </div>
-            <div class="col px-1 d-md-none d-lg-block"><img src="/media/media8.webp" alt="movie image 4"
-                    class="w-100 img-fluid mb-2 mb-lg-0  ">
+            <div class="col px-1 d-md-none d-lg-block"><a href="#"><img src="/media/media8.webp" alt="movie image 4"
+                    class="w-100 img-fluid mb-2 mb-lg-0  "></a>
             </div>
         </div>
 
     <div class="container-fluid mt-4 pl-lg-5">
         <h3 style="margin-left: -10px;" class="section-title text-white">New Releases</h3>
         <div class="row mx-n1 row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5 mb-4">
-            <div class="col px-1"><img src="/media/media9.jpg" alt="movie image 1"
-                    class="w-100 img-fluid mb-2 mb-lg-0 ">
+          <div class="col px-1"><a href="#"><img src="/media/media9.jpg" alt="movie image 1"
+                    class="w-100 img-fluid mb-2 mb-lg-0 "></a>
             </div>
-            <div class="col px-1"><img src="/media/media10.jpg" alt="movie image 2"
-                    class="w-100 img-fluid mb-2 mb-lg-0 ">
+            <div class="col px-1"><a href="#"><img src="/media/media10.jpg" alt="movie image 2"
+                    class="w-100 img-fluid mb-2 mb-lg-0 "></a>
             </div>
-            <div class="col px-1"><img src="/media/media11.jpg" alt="movie image 3"
-                    class="w-100 img-fluid mb-2 mb-lg-0 ">
+            <div class="col px-1"><a href="#"><img src="/media/media11.jpg" alt="movie image 3"
+                    class="w-100 img-fluid mb-2 mb-lg-0 "></a>
             </div>
-            <div class="col px-1"><img src="/media/media12.jpg" alt="movie image 4"
-                    class="w-100 img-fluid mb-2 mb-lg-0  ">
+            <div class="col px-1"><a href="#"><img src="/media/media12.jpg" alt="movie image 4"
+                    class="w-100 img-fluid mb-2 mb-lg-0  "></a>
             </div>
-            <div class="col px-1 d-md-none d-lg-block"><img src="/media/media13.jpg" alt="movie image 4"
-                    class="w-100 img-fluid mb-2 mb-lg-0  ">
+            <div class="col px-1 d-md-none d-lg-block"><a href="#"><img src="/media/media13.jpg" alt="movie image 4"
+                    class="w-100 img-fluid mb-2 mb-lg-0  "></a>
             </div>
         </div>
 
