--- a/backoffice.html
+++ b/backoffice.html
@@ -100,52 +100,47 @@
         <h3 class="subtitle">Add a movie or show.</h3>
       </div>
       <div>
-        <form>
+        <form onsubmit="handleSubmit(event)">
           <div class="form-group">
-            <label for="exampleFormControlInput1">Movie/Show Title</label>
+            <label for="name">Movie/Show Title</label>
             <input
-              type="email"
+              type="text"
               class="form-control"
-              id="exampleFormControlInput1"
-              placeholder="name@example.com"
+              id="name"
+              placeholder="Enter title"
             />
           </div>
           <div class="form-group">
-            <label for="exampleFormControlSelect1">Example select</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
+            <label for="description">Description</label>
+            <input
+              type="text"
+              class="form-control"
+              id="description"
+              placeholder="Enter description"
+            />
           </div>
           <div class="form-group">
-            <label for="exampleFormControlSelect2"
-              >Example multiple select</label
-            >
-            <select
-              multiple
+            <label for="category">Category</label>
+            <input
+              type="text"
               class="form-control"
-              id="exampleFormControlSelect2"
-            >
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
+              id="category"
+              placeholder="Enter category"
+            />
           </div>
           <div class="form-group">
-            <label for="exampleFormControlTextarea1">Example textarea</label>
-            <textarea
+            <label for="imageUrl">Upload Movie/Show Image</label>
+            <input
+              type="text"
               class="form-control"
-              id="exampleFormControlTextarea1"
-              rows="3"
-            ></textarea>
+              id="imageUrl"
+              placeholder="Enter image URL"
+            />
           </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
     </main>
+    <script src="backoffice.js"></script>
   </body>
 </html>
