--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="row">
         <div class="column">
-          <h1>TV Shows</h1>
+          <h1>Movies</h1>
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle bg-dark" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Genres
