--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
       </div>
     </nav>
     <main>
-      <div class="container">
+      <div class="container genres-drop-down">
         <div class="row">
+          <h1>Movies</h1>
           <div class="column">
-            <h1>Movies</h1>
             <div class="dropdown">
               <button
                 class="btn btn-secondary dropdown-toggle bg-dark"
