--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
         </div>
       </div>
 
-      <div class="container-fluid mt-4 pl-lg-5 titles genres"></div>
+      <div class="container-fluid mt-4 pl-lg-5 titles genres">
+        
     </main>
-    <div class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="column">
@@ -189,7 +190,7 @@
         <button>Service Code</button>
         <p style="color: grey; margin-top: 5px">© Strive Netflix Clone</p>
       </div>
-    </div>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
