--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="container-fluid mt-4 pl-lg-5 titles genres">
         
     </main>
-    <footer class="footer">
+    <footer>
       <div class="container">
         <div class="row">
           <div class="column">
