--- a/index.html
+++ b/index.html
@@ -62,16 +62,12 @@
           </li>
         </ul>
       </div>
-      <img
-        src="search_logo.jpg"
-        style="margin-right: 15px"
-        class="mr-2"
-        width="22"
-        height="22"
-      />
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search" viewBox="0 0 16 16">
+  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+</svg>
       <p style="margin-right: 15px" class="text-center text-white m-1">KIDS</p>
       <img
-        src="bell.png"
+        src="/assets/media/kids.PNG"
         style="margin-right: 15px; margin-left: 15px"
         style="margin-right: 15px"
         class="mr-2"
@@ -88,10 +84,10 @@
           aria-expanded="false"
         ></button>
         <div class="dropdown-menu dropdown-menu-right m-1">
-          <button class="dropdown-item" type="button">Action</button>
-          <button class="dropdown-item" type="button">Another action</button>
+          <button class="dropdown-item" type="button">User Profile</button>
+          <button class="dropdown-item" type="button">Settings</button>
           <button class="dropdown-item border-0" type="button">
-            Something else here
+            Help Centre
           </button>
         </div>
       </div>
