Updated backoffice JS
Working on displaying each movie in back office to implement deleting and putting

--- a/backoffice.html
+++ b/backoffice.html
@@ -150,6 +150,7 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
+      <div id="entriesGallery"></div>
     </main>
     <script src="backoffice.js"></script>
   </body>
