--- a/backoffice.html
+++ b/backoffice.html
@@ -150,7 +150,7 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
-      <div id="entriesGallery"></div>
+      <div class="entriesGallery"></div>
     </main>
     <script src="backoffice.js"></script>
   </body>
