--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             <a href="#">Contact Us</a>
           </div>
         </div>
-        <button>Service Code</button>
-        <p style="color: grey; margin-top: 5px">© Strive Netflix Clone</p>
+        <button class="btn-danger">Service Code</button>
+        <p style="color: grey; margin-top: 5px">Netflix Clone</p>
       </div>
     </footer>
 
