--- a/backoffice.html
+++ b/backoffice.html
@@ -147,7 +147,7 @@
               placeholder="Enter image URL"
             />
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-outline-primary">Submit</button>
         </form>
       </div>
       <div class="entriesGallery"></div>
